--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,9 @@ set(SRCROOT ${CMAKE_SOURCE_DIR}/src/)
 set(SRC
     ${INCROOT}/Map.hpp
     ${SRCROOT}/Map.cpp
+    ${INCROOT}/Display.hpp
+    ${SRCROOT}/Display.cpp
 )
-add_library(map STATIC ${SRC})
-target_include_directories(map PUBLIC ${INCROOT})
+add_library(src STATIC ${SRC})
+target_link_libraries(src PRIVATE raylib)
+target_include_directories(src PUBLIC ${INCROOT})
