--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,15 @@
 set(INCROOT ${CMAKE_SOURCE_DIR}/includes/)
 set(SRCROOT ${CMAKE_SOURCE_DIR}/src/)
 set(SRC
-    ${INCROOT}/Map.hpp
-    ${SRCROOT}/Map.cpp
-    ${INCROOT}/Display.hpp
-    ${SRCROOT}/Display.cpp
+    ${INCROOT}/ACase.hpp
+    ${SRCROOT}/ACase.cpp
 )
 add_library(src STATIC ${SRC})
 target_link_libraries(src PRIVATE raylib)
-target_include_directories(src PUBLIC ${INCROOT})
+target_include_directories(src PUBLIC
+    ${INCROOT}
+)
+
+add_subdirectory(display)
+add_subdirectory(map)
+# add_subdirectory(player)
