--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,3 +34,4 @@ target_include_directories(snake PUBLIC ${INCROOT})
 target_link_libraries(${PROJECT_NAME} PRIVATE src)
 target_link_libraries(${PROJECT_NAME} PRIVATE map)
 target_link_libraries(${PROJECT_NAME} PRIVATE display)
+target_link_libraries(${PROJECT_NAME} PRIVATE objects)
