feat: start player

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,4 @@ target_link_libraries(${PROJECT_NAME} PRIVATE src)
 target_link_libraries(${PROJECT_NAME} PRIVATE map)
 target_link_libraries(${PROJECT_NAME} PRIVATE display)
 target_link_libraries(${PROJECT_NAME} PRIVATE objects)
+target_link_libraries(${PROJECT_NAME} PRIVATE player)
