feat: setting button + log when click

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,3 +36,4 @@ target_link_libraries(${PROJECT_NAME} PRIVATE map)
 target_link_libraries(${PROJECT_NAME} PRIVATE display)
 target_link_libraries(${PROJECT_NAME} PRIVATE objects)
 target_link_libraries(${PROJECT_NAME} PRIVATE player)
+target_link_libraries(${PROJECT_NAME} PRIVATE textures)
