--- a/src/display/CMakeLists.txt
+++ b/src/display/CMakeLists.txt
@@ -3,7 +3,10 @@ set(SRCROOT ${CMAKE_SOURCE_DIR}/src/display)
 set(SRC
     ${INCROOT}/Display.hpp
     ${SRCROOT}/Display.cpp
+    ${INCROOT}/ADisplay.hpp
+    ${SRCROOT}/ADisplay.cpp
 )
+add_subdirectory(textures)
 add_library(display STATIC ${SRC})
 target_link_libraries(display PRIVATE raylib)
 target_include_directories(display PUBLIC
@@ -12,4 +15,5 @@ target_include_directories(display PUBLIC
 )
 target_link_libraries(display PRIVATE
     map
-    player)
+    player
+    textures)
