feat: back button + fix pos snake + menu class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,3 +37,4 @@ target_link_libraries(${PROJECT_NAME} PRIVATE display)
 target_link_libraries(${PROJECT_NAME} PRIVATE objects)
 target_link_libraries(${PROJECT_NAME} PRIVATE player)
 target_link_libraries(${PROJECT_NAME} PRIVATE textures)
+target_link_libraries(${PROJECT_NAME} PRIVATE views)
