--- a/src/display/textures/CMakeLists.txt
+++ b/src/display/textures/CMakeLists.txt
@@ -7,12 +7,15 @@ set(SRC
     ${SRCROOT}/Play.cpp
     ${INCROOT}/Pause.hpp
     ${SRCROOT}/Pause.cpp
+    ${INCROOT}/Back.hpp
+    ${SRCROOT}/Back.cpp
 )
 add_library(textures STATIC ${SRC})
 target_link_libraries(textures PRIVATE raylib)
 target_include_directories(textures PUBLIC
     ${INCROOT}
     ${CMAKE_SOURCE_DIR}/includes/
+    ${CMAKE_SOURCE_DIR}/includes/display
 )
 target_link_libraries(textures PRIVATE
     display)
