--- a/src/display/CMakeLists.txt
+++ b/src/display/CMakeLists.txt
@@ -1,10 +1,12 @@
 set(INCROOT ${CMAKE_SOURCE_DIR}/includes/display)
 set(SRCROOT ${CMAKE_SOURCE_DIR}/src/display)
 set(SRC
-    ${INCROOT}/Display.hpp
-    ${SRCROOT}/Display.cpp
-    ${INCROOT}/ADisplay.hpp
-    ${SRCROOT}/ADisplay.cpp
+    ${INCROOT}/DisplayManager.hpp
+    ${SRCROOT}/DisplayManager.cpp
+    ${INCROOT}/AObjectDisplay.hpp
+    ${SRCROOT}/AObjectDisplay.cpp
+    ${INCROOT}/AViewDisplay.hpp
+    ${SRCROOT}/AViewDisplay.cpp
 )
 add_subdirectory(textures)
 add_subdirectory(views)
@@ -13,6 +15,7 @@ target_link_libraries(display PRIVATE raylib)
 target_include_directories(display PUBLIC
     ${INCROOT}
     ${CMAKE_SOURCE_DIR}/includes/
+    ${CMAKE_SOURCE_DIR}/includes/map
 )
 target_link_libraries(display PRIVATE
     map
