refactor: pause and game in separate class

--- a/src/display/views/CMakeLists.txt
+++ b/src/display/views/CMakeLists.txt
@@ -5,6 +5,10 @@ set(SRC
     ${SRCROOT}/Menu.cpp
     ${INCROOT}/SettingsView.hpp
     ${SRCROOT}/SettingsView.cpp
+    ${INCROOT}/PauseView.hpp
+    ${SRCROOT}/PauseView.cpp
+    ${INCROOT}/GameView.hpp
+    ${SRCROOT}/GameView.cpp
 )
 add_library(views STATIC ${SRC})
 target_link_libraries(views PRIVATE raylib map player)
