--- a/src/display/views/CMakeLists.txt
+++ b/src/display/views/CMakeLists.txt
@@ -9,6 +9,8 @@ set(SRC
     ${SRCROOT}/PauseView.cpp
     ${INCROOT}/GameView.hpp
     ${SRCROOT}/GameView.cpp
+    ${INCROOT}/GameOverView.hpp
+    ${SRCROOT}/GameOverView.cpp
 )
 add_library(views STATIC ${SRC})
 target_link_libraries(views PRIVATE raylib map player)
