--- a/src/game/map/player/CMakeLists.txt
+++ b/src/game/map/player/CMakeLists.txt
@@ -1,5 +1,5 @@
-set(INCROOT ${CMAKE_SOURCE_DIR}/includes/player)
-set(SRCROOT ${CMAKE_SOURCE_DIR}/src/player)
+set(INCROOT ${CMAKE_SOURCE_DIR}/includes/game/map/player)
+set(SRCROOT ${CMAKE_SOURCE_DIR}/src/game/map/player)
 set(SRC
     ${INCROOT}/Player.hpp
     ${SRCROOT}/Player.cpp
@@ -8,7 +8,7 @@ add_library(player STATIC ${SRC})
 target_link_libraries(player PRIVATE raylib)
 target_include_directories(player PUBLIC
     ${INCROOT}
-    ${CMAKE_SOURCE_DIR}/includes/
+    ${CMAKE_SOURCE_DIR}/includes/game
 )
 target_link_libraries(player PRIVATE
     map)
