--- a/src/display/views/CMakeLists.txt
+++ b/src/display/views/CMakeLists.txt
@@ -18,7 +18,7 @@ add_library(views STATIC ${SRC})
 target_link_libraries(views PRIVATE raylib map player)
 target_include_directories(views PUBLIC
     ${INCROOT}
-    ${CMAKE_SOURCE_DIR}/includes/
+    ${CMAKE_SOURCE_DIR}/includes/game
 )
 target_link_libraries(views PRIVATE
     textures)
