--- a/src/game/map/player/CMakeLists.txt
+++ b/src/game/map/player/CMakeLists.txt
@@ -5,7 +5,11 @@ set(SRC
     ${SRCROOT}/Player.cpp
 )
 add_library(player STATIC ${SRC})
-target_link_libraries(player PRIVATE raylib)
+if (WIN32)
+    target_link_libraries(player PRIVATE raylib)
+else()
+    target_link_libraries(player PRIVATE raylib game)
+endif()
 target_include_directories(player PUBLIC
     ${INCROOT}
     ${CMAKE_SOURCE_DIR}/includes/game
